# battleship-tauri

./: README.md  package-lock.json  package.json  pnpm-lock.yaml
src/: index.html  main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: permissions.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src-tauri/src/battleship_engine/: direction.rs  game_status.rs  mod.rs  position.rs  ship.rs  ship_status.rs
